--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,12 +10,17 @@ source:
   sha256: e072635a3a6709d83a05fa43804d4046f22aef44edd9afbc965eb1f435121697
 
 build:
-  number: 2
+  number: 3
   script: {{ PYTHON }} -m pip install . -vv
 
 requirements:
   build:
     - {{ compiler("c") }}
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - cython                                 # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
+    - pybind11                               # [build_platform != target_platform]
   host:
     - python
     - numpy
